--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../my-portfolio/css/styles.css">
     <title>3dzzyrha's Contact Page</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href = "/portfolio/index.html">Home</a></li>
-        <li><a href = "/portfolio/about.html">About</a></li>
+        <li><a href = "/my-portfolio/index.html">Home</a></li>
+        <li><a href = "/my-portfolio/about.html">About</a></li>
       </ul>
     </nav>
     <div id="contact">
