--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../portfolio/css/styles.css">
+    <link rel="stylesheet" href="../my-portfolio/css/styles.css">
     <title>3dzzyrha's Portfolio</title>
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href = "/portfolio/about.html">About</a></li>
-        <li><a href = "/portfolio/contact.html">Contact</a></li>
+        <li><a href = "/my-portfolio/about.html">About</a></li>
+        <li><a href = "/my-portfolio/contact.html">Contact</a></li>
       </ul>
     </nav>
     <h1>3dzzyrha's Portfolio</h1>
