--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../my-portfolio/css/styles.css">
+    <link rel="stylesheet" href="../my-portfolio/css/backToTopButton.css">
+    <script src="../js/backToTop.js"></script>
     <title>About 3dzzyrha</title>
 </head>
 <body>
@@ -20,6 +22,16 @@
         <p>In a past life, I was a crossing guard at my local elementary school. While it was rewarding, I decided I didn't want to be out in the weather, whatever it may be, so I started to learn web development.</p>
         
         <p>I don't want to get stuck making web pages for my family for free, so please hire me!</p>
+
+        <p>I'm adding some Lorem Ipsum text so I can try out the back to top button.</p>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, nisi officia! Nihil commodi ipsum repellat nobis temporibus enim odio! Reiciendis vel voluptas odit esse! Perspiciatis similique provident eveniet in facere!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo aliquid eaque impedit! Dolores expedita nostrum omnis autem nulla, ex officiis sint ut itaque at vel. Facere rem consectetur voluptate.</p>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, nisi officia! Nihil commodi ipsum repellat nobis temporibus enim odio! Reiciendis vel voluptas odit esse! Perspiciatis similique provident eveniet in facere!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo aliquid eaque impedit! Dolores expedita nostrum omnis autem nulla, ex officiis sint ut itaque at vel. Facere rem consectetur voluptate.</p>
      </section>
      <footer>&copy; Copyright 3dzzyrha 2025</footer>
 </body>
