add button to HTML

--- a/about.html
+++ b/about.html
@@ -56,7 +56,17 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, nisi officia! Nihil commodi ipsum repellat nobis temporibus enim odio! Reiciendis vel voluptas odit esse! Perspiciatis similique provident eveniet in facere!</p>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illo aliquid eaque impedit! Dolores expedita nostrum omnis autem nulla, ex officiis sint ut itaque at vel. Facere rem consectetur voluptate.</p>
-     </section>
+    </section>
+
+    <div class="back-to-top-wrapper">
+      <button onclick="scrollToTop()" class="back-to-top-btn" title="Go to top">
+        <!-- Paste in svg of chevron-up -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+        </svg>
+      </button>
+    </div>
+
      <footer>&copy; Copyright 3dzzyrha 2025</footer>
 </body>
 </html>
