--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../my-portfolio/css/backToTopButton.css">
     <link rel="stylesheet" href="../my-portfolio/css/styles.css">
-    <script src="../js/backToTop.js"></script>
+    <script src="../my-portfolio/js/backToTop.js"></script>
     <title>About 3dzzyrha</title>
 </head>
 <body>
